[package]
name = "funny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
serde = { version = "*" , features = ["derive"]}
tokio = { version = "1.22" , features = ["full"]}
reqwest = { version = "0.11.13" ,features = ["json"]}
clap = "2.32"
bat = "0.22.1"
